[package]
name = "serv"
version = "0.1.0"
edition = "2021"

[dependencies]
# prettytable-rs = "0.8.0"
# itertools = "0.10.1"
clap="2.33"
# http="0.2.4"
url="2.2.2"

regex="1"

tokio = { version = "1.0", features = ["full"] }
hyper = {version = "1", features = ["full"]} 
hyper-util = {version = "0.1.3", features = ["tokio"] } 
tls-listener = { version = "0.5.1", features = ["rustls", "hyper-h1"] }
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.1"

bytes = "1.2.1"
sqlite = "0.36"
json = "0.12.4"
matchit = "0.8"

evalexpr = "11.3.0"
markdown = "1.0.0-alpha.16"
