[package]
name = "serv"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = { version="4.5.9", features = ["derive"] }
url = "2.2.2"

regex="1"

tokio = { version = "1.0", features = ["full"] }
hyper = {version = "1", features = ["full"]} 
hyper-util = {version = "0.1.6", features = ["tokio", "server", "http1"] }
http-body-util = "0.1.2"

# tls-listener = { version = "0.5.1", features = ["rustls", "hyper-h1"] }
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.2"

bytes = "1.2.1"
sqlite = "0.36"
json = "0.12.4"
matchit = "0.8"

evalexpr = "11.3.0"
markdown = "1.0.0-alpha.16"
